--- a/login.html
+++ b/login.html
@@ -1,51 +1,83 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       background: #f0f0f0;
+      margin: 0;
+      padding: 0;
     }
+
     .container {
-      width: 300px;
+      max-width: 360px;
       margin: 80px auto;
       padding: 20px;
       background: white;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(1,0,0,0.2);
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.2);
     }
-    .container h2 {
+
+    h2 {
       text-align: center;
       margin-bottom: 20px;
     }
-    input[type="text"], input[type="email"], input[type="tel"], input[type="password"] {
+
+    input[type="email"],
+    input[type="password"] {
       width: 100%;
-      padding: 20px 0px;
-      font-size: 20px;
-      text-align: center;
-      margin: 8px 0;
+      padding: 14px;
+      font-size: 16px;
+      margin: 10px 0;
       border: 1px solid #ccc;
       border-radius: 30px;
+      text-align: center;
+      box-sizing: border-box;
     }
+
     input[type="submit"] {
       width: 100%;
-      padding: 10px;
+      padding: 12px;
       background: #28a745;
       color: white;
+      font-size: 16px;
       border: none;
       border-radius: 40px;
       cursor: pointer;
+      margin-top: 10px;
     }
+
     input[type="submit"]:hover {
       background: #218838;
     }
-    .container a{
-      font-size: 20px;
-      padding: 0px 0px 0 100px;
-      margin: 20px;
-      margin-top: 3px;
+
+    .register-link {
+      text-align: center;
+      margin-top: 15px;
+      font-size: 14px;
+    }
+
+    .register-link a {
+      color: #007bff;
+      text-decoration: none;
+    }
+
+    .register-link a:hover {
+      text-decoration: underline;
+    }
+
+    @media (max-width: 400px) {
+      .container {
+        margin: 40px 16px;
+        padding: 16px;
+      }
+
+      input[type="submit"] {
+        font-size: 15px;
+      }
     }
   </style>
 </head>
@@ -53,12 +85,14 @@
 
 <div class="container">
   <h2>Login</h2>
-  <form action="Login-page" method="POST">
+  <form action="login-page" method="POST">
     <input type="email" name="email" placeholder="Email" required>
     <input type="password" name="password" placeholder="Password" required>
     <input type="submit" value="Login">
   </form>
-  <a href="register.html">Register</a>
+  <div class="register-link">
+    New user? <a href="register.html">Register here</a>
+  </div>
 </div>
 
 <script>
