--- a/all html/Home.html
+++ b/all html/Home.html
@@ -173,6 +173,7 @@
       <a href="#news">News</a>
       <a href="#contact">Contact</a>
       <a href="#about">About</a>
+      <a href="login.html">Logout</a>
     </div>
   </nav>
 
