--- a/all html/Wallet.html
+++ b/all html/Wallet.html
@@ -177,6 +177,7 @@
     <a href="register.html">UPI Change</a>
     <a href="#news">News</a>
     <a href="#contact">Contact</a>
+    <a href="login.html">Logout</a>
   </div>
 </nav>
     <!-- Wallet Content -->
