--- a/all html/football game card.html
+++ b/all html/football game card.html
@@ -168,6 +168,7 @@
       <a href="#news">News</a>
       <a href="#contact">Contact</a>
       <a href="#about">About</a>
+      <a href="login.html">Logout</a>
     </div>
   </nav>
 
